# img_player

./: .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  LICENSE  README.md  build_exe.bat  environment.yml  flick.bat  flick.toml.example  img_player.bat  img_player.spec  import_profile.txt  openrv-tech-reference.md  pyi_rth_dll_priority.py  pyproject.toml  splash_launcher.ps1
.github/workflows/: pages.yml
docs/: disk_cache_roadmap.md
docs/plans/: 2026-04-26-ui-reskin-charter-plan.md
docs/specs/: 2026-04-26-hw-adaptive-perf-design.md  2026-04-26-ui-reskin-charter-design.md  2026-04-27-annotations-design.md  2026-04-28-ephemeral-annotations-design.md  2026-04-29-multi-layer-design.md
docs/website/: changelog.html  index.html
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  cost.json  graph.html  manifest.json
installer/: README.md  flick.iss
perf/: BASELINE.md  PBO_NOTES.md  README.md  baseline.json  baseline_igpu_780m.json  baseline_rtx5070.json  baseline_rtx5070_postreboot.json  contact_sheet_nonreg.json  contact_sheet_play_test.json  optim_full.json  optim_full_2gb.json  optim_gc.json  optim_oiio_t1.json  optim_oiio_threads.json  optim_pbo.json  postopti_slice3_runtime_check.json  postopti_slice5_runtime_monitor.json  postopti_slice6_final_run1.json  postopti_slice6_final_run2.json  tier1_baseline.json  tier1_cold_baseline.json  tier1_cold_post.json  tier1_post.json  tier2_final_post.json  tier2_post.json  variance_run1.json  variance_run2.json  variance_run3.json
scripts/: eat_8gb_ram.bat  headless_player.py  ram_eater.py  show_frame.py
src/img_player/: __init__.py  __main__.py  app.py  app_paths.py  channel_handler.py  compare_handler.py  export_handler.py  media_handler.py  preferences.py  save_frame_handler.py  scan_handler.py  site_config.py  splash.py  user_prefs.py
src/img_player/annotate/: __init__.py  ephemeral.py  overlay.py  persistence.py  store.py  stroke.py  toolbar.py
src/img_player/bench/: __init__.py  recorder.py  runner.py  summarize.py
src/img_player/cache/: __init__.py  _common.py  disk_cache.py  frame_cache.py  master_frame_cache.py  missing_frame.py  missing_placeholder.py  source_key.py  worker_pool.py
src/img_player/color/: __init__.py  auto_detect.py  gpu_processor.py  ocio_manager.py
src/img_player/comment/: store.py
src/img_player/compare/: compose.py  state.py
src/img_player/contact_sheet/: __init__.py  compose.py  decoder.py  state.py
src/img_player/export/: dialog.py  engine.py  progress_dialog.py  renderer.py  settings.py
src/img_player/export/writers/: video.py
src/img_player/io/: __init__.py  formats.py  reader.py
src/img_player/layers/: models.py  session.py  stack.py
src/img_player/media/: __init__.py  audio_source.py  video_probe.py  video_renderer.py  video_source.py
src/img_player/perf/: __init__.py  calibration.py  hardware.py  runtime_monitor.py  runtime_state.py
src/img_player/player/: __init__.py  controller.py  state.py
src/img_player/render/: __init__.py  contact_sheet.py  gl_viewport.py
src/img_player/render/shaders/: __init__.py  fragment_template.glsl  vertex.glsl
src/img_player/sequence/: __init__.py  channels.py  models.py  scanner.py
src/img_player/ui/: __init__.py  brackets_overlay.py  channel_menu.py  channel_panel.py  color_panel.py  compare_band.py  contact_sheet_band.py  drop_action_dialog.py  drop_zone.py  frame_display.py  header_strip.py  icons.py  layer_bar.py  layer_panel.py  main_window.py  preferences_dialog.py  save_frame_dialog.py  sequence_picker.py  shortcuts_dialog.py  status_bar.py  status_format.py  theme.py  timeline.py  transport.py  viewer_widget.py
tests/: conftest.py
tests/integration/: test_controller.py
tests/unit/: test_annotation_overlay_math.py  test_annotation_persistence.py  test_annotation_store.py  test_annotation_stroke.py  test_annotation_timeline_transport.py  test_annotation_toolbar.py  test_app_paths.py  test_audio_source.py  test_auto_detect.py  test_brackets_overlay.py  test_calibration.py  test_channel_groups.py  test_channel_menu.py  test_channel_selection.py  test_cli_overrides.py  test_comment_store.py  test_compare.py  test_controller_fps.py  test_controller_fps_signals.py  test_controller_prefetch.py  test_disk_cache.py  test_ephemeral_alpha.py  test_ephemeral_manager.py  test_export_engine.py  test_export_writers.py  test_formats.py  test_frame_cache.py  test_frame_display.py  test_gpu_processor.py  test_icons.py  test_layer_bar_geometry.py  test_layer_panel_audio.py  test_layer_still.py  test_main_window_status_bar.py  test_master_frame_cache.py  test_missing_frames.py  test_ocio_manager.py  test_overlay_ephemeral.py  test_preferences_ephemeral.py  test_reader.py  (+13 more)
tools/: regen_splash.py
