[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "img_player"
version = "1.0.2"
description = "VFX-grade image sequence player with OCIO color management"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "llethanh" }]
keywords = ["vfx", "image-sequence", "player", "openexr", "ocio"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics :: Viewers",
]
dependencies = [
    "PySide6>=6.6",
    "numpy>=1.26",
    "PyOpenGL>=3.1",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.5",
    "mypy>=1.10",
]
build = [
    # PyInstaller is only needed when packaging the standalone Windows
    # bundle. Kept out of `dev` so a regular `pip install -e .[dev]` does
    # not pull it in. See BUILD.md for the build procedure.
    "pyinstaller>=6.0",
]

[project.scripts]
img_player = "img_player.__main__:main"

[project.urls]
Repository = "https://github.com/llethanh/img_player"

[tool.hatch.build.targets.wheel]
packages = ["src/img_player"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # flake8-bugbear
    "UP",       # pyupgrade
    "RUF",      # ruff-specific
]
ignore = [
    "E501",     # line-too-long (ruff format handles it)
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/img_player"]
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["OpenImageIO.*", "PyOpenColorIO.*", "OpenGL.*", "PySide6.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
