[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "img_player"
version = "1.6.0"
description = "VFX-grade image sequence player with OCIO color management"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "llethanh" }]
keywords = ["vfx", "image-sequence", "player", "openexr", "ocio"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics :: Viewers",
]
dependencies = [
    "PySide6>=6.6",
    "numpy>=1.26",
    "PyOpenGL>=3.1",
    "psutil>=5.9",
    # Disk-cache tier: half-float frame blobs are lz4-compressed for
    # ~25 MB per 4K frame and ~5 ms decode. Falls back to stdlib zlib
    # at runtime if lz4 isn't installable (some bare environments) so
    # this is technically optional — leaving it in dependencies keeps
    # the fast path universal.
    "lz4>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.5",
    "mypy>=1.10",
]
build = [
    # PyInstaller is only needed when packaging the standalone Windows
    # bundle. Kept out of `dev` so a regular `pip install -e .[dev]` does
    # not pull it in. See BUILD.md for the build procedure.
    "pyinstaller>=6.0",
]

[project.scripts]
img_player = "img_player.__main__:main"

[project.urls]
Repository = "https://github.com/llethanh/img_player"

[tool.hatch.build.targets.wheel]
packages = ["src/img_player"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # flake8-bugbear
    "UP",       # pyupgrade
    "RUF",      # ruff-specific
]
ignore = [
    "E501",     # line-too-long (ruff format handles it)
    # Intentional VFX-domain unicode in comments / docstrings / strings:
    # × in grid layout names ("2×2", "3×3"), α in alpha-mode mnemonics
    # ("αS"), em-dashes in prose. The "did you mean ASCII" hints are
    # noise here — these characters carry meaning.
    "RUF001",   # ambiguous-unicode-character-string
    "RUF002",   # ambiguous-unicode-character-docstring
    "RUF003",   # ambiguous-unicode-character-comment
    # ``# noqa: SLF001`` is sprinkled across tests + a few app bridge
    # points to acknowledge private-attribute access. SLF001 isn't in
    # our enabled rule set so ruff flags every ``noqa`` as unused;
    # turning it off keeps the noqa comments as living documentation
    # without forcing us to enable SLF001 globally (the warnings
    # would dwarf the few legit cases).
    "RUF100",   # unused-noqa
    # E741 (ambiguous variable name like ``l``) is style-policy noise
    # in compute-heavy code where short names map to math conventions
    # (e.g. layer ``l`` in a layer iteration).
    "E741",
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/img_player"]
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["OpenImageIO.*", "PyOpenColorIO.*", "OpenGL.*", "PySide6.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
